--- a/data/index.html
+++ b/data/index.html
@@ -54,10 +54,10 @@
                         </tr>
                         <tr>
                             <td>
-                                Software ID:
+                                Firmware ID:
                             </td>
                             <td>
-                                %softwareid%
+                                %firmwareid%
                             </td>
                         </tr>
                         <tr>
